--- a/main_app/templates/drugs/index.html
+++ b/main_app/templates/drugs/index.html
@@ -27,8 +27,7 @@
         </div> {% endcomment %}
         <h2 class="card-title">{{ drug.name }}</h2>
           <p>Form: {{ drug.form }}</p>
-          <p>Form: {{ drug.duration }}</p>
-        <p><small>{{ drug.notes }}</small></p>
+          <p>Duration: {{ drug.duration }}</p>
       </div>
     </a>
   </div>
