add edit and delete views

--- a/main_app/templates/main_app/drug_form.html
+++ b/main_app/templates/main_app/drug_form.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div class="page-header">
-  {% if cat %}
+  {% if drug %}
     <h1>Edit {{ drug.name }}</h1>
   {% else %}
     <h1>Add Medication</h1>
