--- a/main_app/templates/drugs/detail.html
+++ b/main_app/templates/drugs/detail.html
@@ -29,5 +29,30 @@
     </div>
   </div>
 </section>
+<div class="dose-container">
+  <section class="dose">
+    <div class="subsection-title">
+      <h2>Dosage Log:</h2>
+      {% comment %} <img 
+        src="{% static 'images/cat-cone.svg' %}" 
+        alt="An ice cream cone cat"
+      /> {% endcomment %}
+    </div>
+    <table>
+      <thead>
+        <tr><th>Date</th><th>Dose</th><th>Time</th></tr>
+      </thead>
+      <tbody>
+        {% for dose in drug.dose_set.all %}
+          <tr>
+            <td>{{dose.date}}</td>
+            <td>{{dose.dosage}}</td>
+            <td>{{dose.time}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </section>
+</div>
 
 {% endblock %}
