--- a/main_app/templates/drugs/detail.html
+++ b/main_app/templates/drugs/detail.html
@@ -69,7 +69,7 @@
             <tr>
               <td>{{dose.date}}</td>
               <td>{{dose.dosage}}</td>
-              <td>{{dose.time}}</td>
+              <td>at {{dose.time}}</td>
             </tr>
           {% endfor %}
         </tbody>
