--- a/main_app/templates/drugs/index.html
+++ b/main_app/templates/drugs/index.html
@@ -12,8 +12,8 @@
 {% block content %}
 <section class="page-header">
   <h1>Medication List</h1>
+  <img src="{% static 'images/circle.png' %}" alt="Med Logo" />
 </section>
-
 <section class="card-container">
   {% for drug in drugs %}
   <div class="card">
