--- a/main_app/static/css/drugs/drug-detail.css
+++ b/main_app/static/css/drugs/drug-detail.css
@@ -1,9 +1,38 @@
-.drug-container {
-  padding: 35px 30px;
+main {
+  padding: 0px 100px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.drug-container {
+  padding: 35px 30px;
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
+}
+
+.drug-img img {
+  width: 90%;
+  max-width: 350px;
+  border-radius: 50%;
+}
+
+.usr-img {
+  width: 100%;
+  border-radius: var(--card-border-radius);
+}
+
+.drug-details {
+  width: 98%;
+}
+
+.drug-actions {
+  margin-top: 20px;
 }
 
 .dose-container {
@@ -11,6 +40,10 @@
   flex-direction: column;
   padding-bottom: 20px;
   align-items: center;
+  justify-content: center;
+  padding: 20px;
+  width: 850px;
+  max-width: 1000px;
 }
 
 .subsection-title {
@@ -23,10 +56,86 @@
   margin: 0 8px;
 }
 
+
+.color-block {
+  opacity: 0.8;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
+
+.drug-details h1 {
+  font-size: var(--font-xxl);
+  margin: 15px 0 3px;
+  font-family: "Yeseva One", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.drug-details h2 {
+  font-size: var(--font-xl);
+  margin: 0 0 10px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.drug-details h3 {
+  margin: 20px 0 10px;
+  font-size: var(--font-l);
+}
+
+.drug-details p {
+  font-size: var(--font-reg);
+  margin: 5px 0;
+}
+
+.dose-container > section {
+  width: 80%;
+  min-width: 360px;
+  border: var(--borders);
+  border-radius: var(--card-border-radius);
+  padding: 10px;
+  box-shadow: var(--card-box-shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.subsection-title img {
+  height: 70px;
+  margin-left: 8px;
+}
+
+.subsection-title img:first-of-type {
+  margin-left: 16px;
+}
+
+.dose h2 {
+  font-size: 3.2rem;
+  margin: 0;
+  font-family: "Yeseva One", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.dose h3 {
+  font-size: var(--font-xl);
+  margin: 10px 0;
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
 .subsection-content p,
 .subsection-content input,
 .subsection-content select {
   font-size: var(--font-l);
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .subsection-content input,
@@ -35,24 +144,44 @@
   padding: 3px;
 }
 
-.feedings table {
+.dose table {
   width: calc(100% - 16px);
-  text-align: left;
+  text-align: center;
   border-collapse: collapse;
   margin: 0 8px;
 }
 
-.feedings td {
+.dose td {
   padding: 8px 5px;
   font-size: var(--font-reg);
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
 
-.feedings th {
+.dose th {
   font-size: var(--font-l);
   padding: 5px 5px 0;
   border-bottom: rgb(36, 116, 248) solid 2px;
 }
 
-.feedings tr:nth-child(even) {
+.dose tr:nth-child(even) {
   background-color: #f3f3fd;
+}
+
+#file-input {
+  overflow: hidden;
+  position: absolute;
+  width: 0.1px;
+  height: 0.1px;
+}
+
+#file-name {
+  margin-bottom: 10px;
+}
+
+
+.dose {
+  padding: 20px;
 }
