--- a/main_app/templates/drugs/detail.html
+++ b/main_app/templates/drugs/detail.html
@@ -45,7 +45,7 @@
       <a href="{% url 'drug-update' drug.id %}" class='btn warn'>Edit</a>
       <a href="{% url 'drug-delete' drug.id %}" class='btn danger'>Delete</a>
     </div>
-    <h3>Change photo</h3>
+    <h2>Change Photo 📸</h2>
     <p id="file-name"></p>
     <form 
       action="{% url 'add-photo' drug.id %}"
