--- a/main_app/static/css/drugs/drug-detail.css
+++ b/main_app/static/css/drugs/drug-detail.css
@@ -73,20 +73,21 @@ main {
 }
 
 .drug-details h2 {
-  font-size: var(--font-xl);
-  margin: 0 0 10px;
-  margin-top: 0;
-  margin-bottom: 10px;
+  font-size: 3.2rem;
+  margin-top: 40px;
+  font-family: "Yeseva One", serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .drug-details h3 {
-  margin: 20px 0 10px;
+  margin: 30px 0 10px;
   font-size: var(--font-l);
 }
 
 .drug-details p {
   font-size: var(--font-reg);
-  margin: 5px 0;
+  margin: 15px 0 30px;
 }
 
 .dose-container > section {
