--- a/main_app/static/css/drugs/drug-index.css
+++ b/main_app/static/css/drugs/drug-index.css
@@ -19,12 +19,14 @@
 
 .card-img-container img {
   border-radius: 40px;
-  width: 200px;
+  width: 100%;
+  max-width: 150px;
 }
 
 .card-img-container {
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .card-title {
