--- a/main_app/templates/drugs/index.html
+++ b/main_app/templates/drugs/index.html
@@ -32,6 +32,7 @@
           >
         {% endif %}
       </div>
+      <div>
         <h2 class="card-title">{{ drug.name }}</h2>
       </div>
     </a>
